--- a/nnlennesize/index.html
+++ b/nnlennesize/index.html
@@ -7,6 +7,8 @@
 <script src="js/heights_g.js"></script>
 <script src="js/sizes.js"></script>
 <script src="js/main.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+
 <style>
 body{
 font-size: 120%;
@@ -24,27 +26,29 @@ font-size: 120%;
 </style>
 </head>
 <body onload="loadDefaults()">
-<div id="topimg">
-<img src="back.jpg">
+<div class="container">
+<div id="topimg" class="row">
+<img class="responsive-img" src="back.jpg">
 </div>
-<div id="content">
+<div id="content" class="row">
 <form id="data">
-<p>Заполните всего 3 поля:</p>
-<p>День рождения ребёнка:</p>
+<p>Хотите купить LENNE и сомневаетесь в размере? Заполните всего 3 поля:</p>
+<p>1. День рождения ребёнка:</p>
 <input type="date" name="date" required>
-<p>Мальчик или девочка:</p>
+<p>2. Мальчик или девочка:</p>
 <label><input type="radio" name="gender" value="0" class="with-gap" checked><span>Мальчик</span></label>
 <label><input type="radio" name="gender" value="1" class="with-gap"><span>Девочка</span></label>
-<p>Какого роста ваш ребёнок прямо сейчас:</p>
+<p>3. Какого роста ваш ребёнок прямо сейчас:</p>
 <input type="number" name="height" placeholder="см" min="30" max="170" required>  
 </form>
 <p id="error" style="color:red"></p>
 <p id="result"></p>
-<p><input name="button" id="button" type="button" onclick="calcSize()" value="Узнать"></p>
+<p><input name="button" id="button" type="button" class="waves-effect waves-light btn cyan darken-1" onclick="calcSize()" value="Узнать размер"></p>
 </div>
 <div>
-<p>Хотите получить подробную консультацию? <a href="https://vk.me/nnlenne">ПИШИТЕ "ДА"</a></p>
-<p>Хотите посмотреть наличие вашего размера? <a href="https://vk.me/nnlenne">ПИШИТЕ "СМОТРЕТЬ"</a></p>
+<b>Хотите получить подробную консультацию и посмотреть наличие вашего размера?</b>
+<p><a class="waves-effect waves-light btn blue darken-3" href="https://vk.me/nnlenne">Пишите в сообщения сообщества</a></p>
+</div>
 </div>
 </body>
 </html>
