--- a/nnlennesize/index.html
+++ b/nnlennesize/index.html
@@ -47,8 +47,13 @@ font-size: 120%;
 </div>
 <div>
 <b>Хотите получить подробную консультацию и посмотреть наличие вашего размера?</b>
-<p><a class="waves-effect waves-light btn blue darken-3" href="https://vk.me/nnlenne">Пишите в сообщения сообщества</a></p>
 </div>
 </div>
+<script type="text/javascript" src="https://vk.com/js/api/openapi.js?158"></script>
+<!-- VK Widget -->
+<div id="vk_community_messages"></div>
+<script type="text/javascript">
+VK.Widgets.CommunityMessages("vk_community_messages", 126873002, {widgetPosition: "left",tooltipButtonText: "Напишите в сообщения"});
+</script>
 </body>
 </html>
