vk заменено на лс

--- a/nnlennesize/index.html
+++ b/nnlennesize/index.html
@@ -8,10 +8,10 @@
 <script src="js/sizes.js"></script>
 <script src="js/main.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
-<script type="text/javascript" src="https://vk.com/js/api/openapi.js?158"></script>
+<!---<script type="text/javascript" src="https://vk.com/js/api/openapi.js?158"></script>
 <script type="text/javascript">
 var widgetVK = VK.Widgets.CommunityMessages("vk_community_messages", 126873002, {widgetPosition: "left",buttonType: "no_button",tooltipButtonText: "Напишите в сообщения!"});
-</script>
+</script>--->
 <style>
 body{
 font-size: 120%;
@@ -50,7 +50,9 @@ font-size: 120%;
 </div>
 <div>
 <p><b>Хотите получить подробную консультацию и посмотреть наличие вашего размера?</b></p>
-<a href="#" class="waves-effect waves-light btn green darken-1" onclick="widgetVK.expand()">Напишите нам сообщение!</a><div id="vk_community_messages"></div>
+<a href="https://vk.com/write48906125" class="waves-effect waves-light btn green darken-1">Напишите мне в ЛС ➡</a>
+<!---<a class="waves-effect waves-light btn green darken-2" onclick="widgetVK.expand()">Или в сообщения группы</a><div id="vk_community_messages"></div>--->
+<br/>
 </div>
 </div>
 </body>
