Refused to display in a frame

--- a/nnlennesize/index.html
+++ b/nnlennesize/index.html
@@ -50,7 +50,7 @@ font-size: 120%;
 </div>
 <div>
 <p><b>Хотите получить подробную консультацию и посмотреть наличие вашего размера?</b></p>
-<a href="https://vk.com/write48906125" class="waves-effect waves-light btn green darken-1">Напишите мне в ЛС ➡</a>
+<a href="https://vk.com/write48906125" target="_blank" class="waves-effect waves-light btn green darken-1">Напишите мне в ЛС ➡</a>
 <!---<a class="waves-effect waves-light btn green darken-2" onclick="widgetVK.expand()">Или в сообщения группы</a><div id="vk_community_messages"></div>--->
 <br/>
 </div>
