--- a/nnlennesize/index.html
+++ b/nnlennesize/index.html
@@ -37,12 +37,12 @@ font-size: 120%;
 <form id="data">
 <p>Хотите купить зимнюю одежду для&nbsp;ребенка, но&nbsp;сомневаетесь в&nbsp;размере? Заполните всего 3&nbsp;поля:</p>
 <p>1. День рождения ребёнка:</p>
-<input type="date" name="date" required>
+<input type="date" name="date" onfocus="clearResult()" required>
 <p>2. Мальчик или девочка:</p>
 <label><input type="radio" name="gender" value="0" class="with-gap" checked><span>Мальчик</span></label>
 <label><input type="radio" name="gender" value="1" class="with-gap"><span>Девочка</span></label>
 <p>3. Какого роста ваш ребёнок прямо сейчас:</p>
-<input type="number" name="height" placeholder="см" min="30" max="170" required>  
+<input type="number" name="height" placeholder="см" min="40" max="120" onfocus="clearResult()" required>  
 </form>
 <p id="error" style="color:red"></p>
 <p id="result"></p>
